--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <!-- <script src="https://kit.fontawesome.com/04b3a846aa.js" crossorigin="anonymous"></script> -->
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/owl.carousel.min.css">
     <link rel="stylesheet" href="css/owl.theme.default.css">
@@ -20,66 +19,69 @@
 <body>
   <!-- start of hero section -->
   <section id="hero">
-      <nav class="navbar navbar-expand-lg justify-content-center">
-        <div class="navbar-section">
-          <div class="row w-100 justify-content-between">
-            <div class="col-7">
-              <img src="assets/food4you_black.png" alt="" class="navbar-brand">
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-              </button>
+    <nav class="navbar navbar-expand-md navbar-light pt-2 pb-0">
+      <div class="container-fluid align-items-center">
+        <a class="navbar-brand ms-sm-4 ms-1 p-0 me-0" href="#">
+          <img src="assets/food4you_black.png" alt="" class="food">
+        </a>
+        <div class="d-flex ms-auto align-items-center justify-content-center">
+          <div class="d-flex flex-column justify-content-end">
+            <p class="express m-0 p-0 text-end">EXPRESS DELIVERY</p>
+            <p class="number m-0 p-0 text-end">1800 000 000</p>
             </div>
-            <div class="col-5">
-              <p class="nav-span text-end">EXPRESS DELIVERY</p>
-              <p class="nav-number text-end">1800 258 888</p>
-              <div>
-                <ul class="navbar-nav justify-content-between">
-                  <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">HOME</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="#">MENU</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="#">OUR STORY</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="#">CONTACT US</a>
-                  </li>
-                </ul>
-              </div>
-            </div>
+          <div class="ps-0">
+            <img src="assets/smartphone.png" alt="" class="smartphone">
           </div>
         </div>
-      </nav>
-      <div class="left-section container ms-0 w-50 text-center">
-        <div class="row d-flex flex-column">
-          <div class="left-section-1 col d-flex flex-column justify-content-end mt-5">
-            <h3 class="dancing-script">Are You Hungry?</h3>
-            <h3 class="fred fred-large">DON'T WAIT!</h3>
-            <h3 class="headline">LET START TO ORDER FOOD NOW</h3>
-          </div>
-          <div class="col d-flex flex-column align-items-center">
-            <div class="d-flex align-items-center gap-3 mb-2">
-              <p class="fred">THIS MONDAY<br>HAPPY HOURS</p>
-              <p class="fred offer">1+1=3</p>
-            </div>
-            <a href="#" class="headline order-btn">ORDER NOW</a>
-          </div>
+        <i class="navbar-toggler fa-solid fa-caret-down border-0 text-dark fs-2 ps-0" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <!-- <span class="navbar-toggler-icon"></span> -->
+          <!-- <i class="fa-solid fa-caret-down"></i> -->
+        </i>
+      </div>
+    </nav>  
+    <nav class="navbar navbar-expand-md pt-0">
+      <div class="container-fluid">
+        <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
+          <ul class="navbar-nav mb-2 mb-lg-0 me-2">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="#">HOME</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">MENU</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">OUR STORY</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">CONTACT US</a>
+            </li>
+          </ul>
         </div>
-        
-        
+      </div>
+    </nav>
+      <div class="left-section container ms-auto ms-sm-2 me-auto text-center w-50 my-auto mt-5 ps-0">
+        <h3 class="dancing-script">Are You Hungry?</h3>
+        <h3 class="fred fred-large">DON'T WAIT!</h3>
+        <h4 class="headline">LET START TO ORDER FOOD NOW</h4>
+        <hr class="m-0 w-75 mx-auto">
+        <div class="d-flex align-items-center gap-3 mb-2 justify-content-center">
+          <p class="fred mb-0">THIS MONDAY<br>HAPPY HOURS</p>
+          <p class="fred offer mb-0">1+1=3</p>
+        </div>
+        <a href="#" class="headline order-btn btn border border-2 border-dark px-5 ">ORDER NOW</a>
       </div>
   </section>
   <!-- End of hero section -->
 
   <!-- Start of menu section -->
-  <div class="container">
+  <div class="menu container-fluid">
     <h1 class="fred text-center mb-3">CHOOSE AND ENJOY</h1>
     <p class="text-center w-75 m-auto mb-5">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ducimus non fuga totam, ipsa labore accusamus minima enim consequatur numquam quis quae nulla maiores! Facilis placeat voluptatum vitae, nisi delectus asperiores hic</p>
+    <div class="yellow-back"></div>
     <div class="container">
-      <div class="row row-cols-lg-3 row-cols-md-3 row-cols-sm-1">
-        <div class="col">
+      <div class="row justify-content-center align-items-center">
+        <div class="col-8 col-sm-6 col-md-4">
+          <!-- <div class="card-yellow"></div> -->
           <div class="card text-center border-0">
             <img src="assets/first card.png" alt="">
             <div class="card-body">
@@ -89,7 +91,7 @@
             </div>
           </div>
         </div>
-        <div class="col">
+        <div class="col-8 col-sm-6 col-md-4">
           <div class="card text-center border-0">
             <img src="assets/second card.png" alt="">
             <div class="card-body">
@@ -99,7 +101,7 @@
             </div>
           </div>
         </div>
-        <div class="col">
+        <div class="col-8 col-sm-6 col-md-4">
           <div class="card text-center border-0">
             <img src="assets/third card.png" alt="">
             <div class="card-body">
@@ -134,15 +136,9 @@
         <div class="slider-card" data-dot="<button class='dot'></button>">
           <img src="assets/slider 3.png" alt="">
         </div>
-        <!-- <div class="slider-card" data-dot="<button class='dot'></button>">
+        <div class="slider-card" data-dot="<button class='dot'></button>">
           <img src="assets/slider 1.png" alt="">
         </div>
-        <div class="slider-card" data-dot="<button class='dot'></button>">
-          <img src="assets/slider 2.png" alt="">
-        </div>
-        <div class="slider-card" data-dot="<button class='dot'></button>">
-          <img src="assets/slider 3.png" alt="">
-        </div> -->
       </div>
     </div>
   </section>
@@ -151,21 +147,21 @@
 
   <!-- start of ads -->
   <section class="upcoming">
-    <div class="ads-container container">
-      <div class="row justify-content-center gap-4 row-cols-lg-5 row-cols-sm-6">
-        <div class="upcoming-left col-5 text-white ">
+    <div class="ads-container container-fluid">
+      <div class="row justify-content-center gap-4">
+        <div class="upcoming-left col-11 col-md-5 col-sm-10 text-white ">
           <p class="fs-5 fw-bolder mb-0">TRY IT TODAY</p>
           <p class="fs-2 fw-bolder">MOST<br>POPULAR<br>PASTA</p>
         </div>
-        <div class="upcoming-right col-5 d-flex flex-column justify-content-between align-items-center gap-4 text-white">
-            <div class="upcoming-right-1">
-              <p class="fs-5 fw-bolder mb-0">TRY IT TODAY</p>
-              <p class="fs-3 fw-bolder">MORE FUN<br>MORE TASTE</p>
-            </div>
-            <div class="upcoming-right-2">
-              <p class="fs-5 fw-bolder mb-0">TRY IT TODAY</p>
-              <p class="fs-3 fw-bolder">FRESH & CHILI</p>
-            </div>
+        <div class="upcoming-right col-11 col-md-5 col-sm-10 d-flex flex-column justify-content-between align-items-center gap-4 text-white">
+          <div class="upcoming-right-1">
+            <p class="fs-5 fw-bolder mb-0">TRY IT TODAY</p>
+            <p class="fs-3 fw-bolder">MORE FUN<br>MORE TASTE</p>
+          </div>
+          <div class="upcoming-right-2">
+            <p class="fs-5 fw-bolder mb-0">TRY IT TODAY</p>
+            <p class="fs-3 fw-bolder">FRESH & CHILI</p>
+          </div>
         </div>
       </div>
     </div>
@@ -179,15 +175,15 @@
         <h3 class="headline">RESERVATION</h3>
         <h2 class="fred">BOOK YOUR TABLE</h2>
       </div>
-      <div class="row gap-3 justify-content-center mt-5"> 
-        <div class="col-4">
+      <div class="row gap-md-3 justify-content-center mt-5"> 
+        <div class="col-8 col-md-5 col-lg-4">
           <form class="mb-3">
             <input type="text" class="form-control mb-4" id="name" placeholder="Name">
             <input type="text" class="form-control mb-4" id="date" placeholder="Date">
             <input type="number" class="form-control mb-4" id="people" placeholder="People">
           </form>
         </div>
-        <div class="col-4">
+        <div class="col-8 col-md-5 col-lg-4">
           <form>
             <input type="email" class="form-control mb-4" id="email" placeholder="Email">
             <input type="text" class="form-control mb-4" id="time" placeholder="Time">
@@ -202,22 +198,22 @@
   <!-- start of footer  -->
 
   <div class="footer">
-    <div class="container text-white p-3">
-      <div class="text-row row">
-        <div class="col justify-content-end">
-          <div><img src="assets/food4you.png" alt=""></div>
-          <p class="mt-5">Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis, ad ea! Dolorum fugiat corporis eos, delectus magni ullam quae recusandae ipsum consequuntur vero a neque cupiditate blanditiis suscipit perferendis natus!</p>
+    <div class="container-fluid text-white p-3 pb-0">
+      <div class="text-row row mx-3 mt-1 mt-sm-4">
+        <div class="col-10 col-md-6 justify-content-end">
+          <div><img class="footer-img" src="assets/food4you.png" alt=""></div>
+          <p class="mt-2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis, ad ea! Dolorum fugiat corporis eos, delectus magni ullam quae recusandae ipsum consequuntur vero a neque cupiditate blanditiis suscipit perferendis natus!</p>
         </div>
-        <div class="col d-flex align-items-end justify-content-end">
+        <div class="col-12 col-md-6 d-flex align-items-md-end justify-content-md-end justify-content-sm-start mt-sm-3">
           <div class="d-flex flex-column justify-content-start">
-            <p class="text-start"><span><i class="icon fa-sharp fa-solid fa-location-dot mx-4 fs-4"></i></span>Main Road, Building Name, Country</p>
-            <p class="text-start"><span><i class="icon fa-sharp fa-solid fa-envelope mx-4 fs-4"></i></span>info@companyname.com</p>
+            <p class="text-start"><span><i class="icon fa-sharp fa-solid fa-location-dot me-4 fs-4"></i></span>Main Road, Building Name, Country</p>
+            <p class="text-start"><span><i class="icon fa-sharp fa-solid fa-envelope me-4 fs-4"></i></span>info@companyname.com</p>
           </div>
         </div>
       </div>
-      <div class="copyright row">
-        <div class="col d-flex justify-content-between">
-          <p>&copy Company Name 2020. All rights reserved.</p>
+      <div class="copyright row mx-3 mt-1 mt-md-2">
+        <div class="col justify-content-between align-items-center d-sm-flex">
+          <p class="m-0">&copy Company Name 2020. All rights reserved.</p>
           <div class="logo">
             <i class="fa-brands fa-instagram"></i>
             <i class="fa-brands fa-facebook"></i>
@@ -225,9 +221,6 @@
             <i class="fa-brands fa-whatsapp"></i>
           </div>
         </div>
-      </div>
-      <div class="row">
-
       </div>
     </div>
   </div>
@@ -237,10 +230,5 @@
   <script src="js/script.js"></script>
   <script src="https://kit.fontawesome.com/04b3a846aa.js" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" ></script> 
-	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" ></script>
 </body>
 </html>
-
-	<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" ></script> 
-	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" ></script>
