--- a/index.html
+++ b/index.html
@@ -59,11 +59,11 @@
         </div>
       </div>
     </nav>
-      <div class="left-section container ms-auto ms-sm-2 me-auto text-center w-50 my-auto mt-5 ps-0">
+      <div class="left-section container text-center px-0">
         <h3 class="dancing-script">Are You Hungry?</h3>
         <h3 class="fred fred-large">DON'T WAIT!</h3>
         <h4 class="headline">LET START TO ORDER FOOD NOW</h4>
-        <hr class="m-0 w-75 mx-auto">
+        <hr class="m-0 mx-auto">
         <div class="d-flex align-items-center gap-3 mb-2 justify-content-center">
           <p class="fred mb-0">THIS MONDAY<br>HAPPY HOURS</p>
           <p class="fred offer mb-0">1+1=3</p>
@@ -80,7 +80,7 @@
     <div class="yellow-back"></div>
     <div class="container">
       <div class="row justify-content-center align-items-center">
-        <div class="col-8 col-sm-6 col-md-4">
+        <div class="col-12 col-sm-6 col-md-4">
           <!-- <div class="card-yellow"></div> -->
           <div class="card text-center border-0">
             <img src="assets/first card.png" alt="">
@@ -91,7 +91,7 @@
             </div>
           </div>
         </div>
-        <div class="col-8 col-sm-6 col-md-4">
+        <div class="col-12 col-sm-6 col-md-4">
           <div class="card text-center border-0">
             <img src="assets/second card.png" alt="">
             <div class="card-body">
@@ -101,7 +101,7 @@
             </div>
           </div>
         </div>
-        <div class="col-8 col-sm-6 col-md-4">
+        <div class="col-12 col-sm-6 col-md-4">
           <div class="card text-center border-0">
             <img src="assets/third card.png" alt="">
             <div class="card-body">
@@ -200,7 +200,7 @@
   <div class="footer">
     <div class="container-fluid text-white p-3 pb-0">
       <div class="text-row row mx-3 mt-1 mt-sm-4">
-        <div class="col-10 col-md-6 justify-content-end">
+        <div class="col-12 col-md-6 justify-content-end">
           <div><img class="footer-img" src="assets/food4you.png" alt=""></div>
           <p class="mt-2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis, ad ea! Dolorum fugiat corporis eos, delectus magni ullam quae recusandae ipsum consequuntur vero a neque cupiditate blanditiis suscipit perferendis natus!</p>
         </div>
@@ -211,10 +211,10 @@
           </div>
         </div>
       </div>
-      <div class="copyright row mx-3 mt-1 mt-md-2">
+      <div class="copyright row mx-3 mt-1 mt-md-5">
         <div class="col justify-content-between align-items-center d-sm-flex">
           <p class="m-0">&copy Company Name 2020. All rights reserved.</p>
-          <div class="logo">
+          <div class="logo mt-2">
             <i class="fa-brands fa-instagram"></i>
             <i class="fa-brands fa-facebook"></i>
             <i class="fa-brands fa-twitter"></i>
